--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@vercel/postgres": "^0.10.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "better-auth": "^1.3.8",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
