--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.5.2",
     "pg": "^8.12.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
