fix: send x-goog-user-project for vertex

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ OPENROUTER_TEXT_MODEL=openai/gpt-5-mini
 OPENROUTER_IMAGE_MODEL=google/gemini-2.5-flash-image-preview
 
 # Vertex AI image generation
+# Used for the `x-goog-user-project` header
 VERTEX_PROJECT_ID=
 VERTEX_LOCATION=
 VERTEX_API_KEY=
