--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "better-auth": "^1.3.8",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@smithy/querystring-builder": "^3.0.5",
     "next": "15.5.2",
     "pg": "^8.12.0",
     "react": "19.1.0",
