--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,11 +17,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install
-COPY backend/requirements.txt /app/requirements.txt
+COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # Copy app
-COPY backend/app /app/backend/app
+COPY app /app/backend/app
 
 EXPOSE 8080
 
